# sstg-nav

./: .gitignore  PROJECT_PROGRESS.md  PROJECT_SUMMARY.md  README.md  SSTG-Nav-Plan.md  SSTG_Quick_Reference.md  SSTG_UI_Guide.md  SSTG_User_Guide.md  SSTG_V2_System_Architecture.md  SSTG_V3_System_Architecture.md  WORKSPACE_MIGRATION_SUMMARY.md
hw_robot_ws/src/cmd_control/: ReadMe.md  control.yaml  package.xml  setup.cfg  setup.py
hw_robot_ws/src/cmd_control/cmd_control/: cmd_vel_to_serial.py
hw_robot_ws/src/cmd_control/test/: test_copyright.py  (+2 more)
hw_robot_ws/src/hw_robot_nav/: README.md  package.xml  setup.cfg  setup.py
hw_robot_ws/src/hw_robot_nav/config/: dwa_nav_params.yaml  ekf.yaml  mqtt_bridge.yaml  nav2_params.yaml  nav2_params_experimental.yaml  slam_gmapping.yaml
hw_robot_ws/src/hw_robot_nav/hw_robot_nav/: check_system.py  scan_downsampler.py
hw_robot_ws/src/hw_robot_nav/launch/: ekf.launch.py  gmapping.launch.py  gmapping_ekf.launch.py  gmapping_nav2.launch.py  hardware.launch.py  navigation.launch.py  navigation_dwa_launch.py  navigation_ekf.launch.py
hw_robot_ws/src/hw_robot_nav/maps/: README.md  hw_robot_map.pgm  hw_robot_map.yaml
hw_robot_ws/src/hw_robot_nav/rviz/: gmapping.rviz
hw_robot_ws/src/mqtt_bridge_pkg/: package.xml  setup.py
hw_robot_ws/src/mqtt_bridge_pkg/mqtt_bridge_pkg/: mqtt_to_ros_node.py
project_test/: TESTING.md  complete_test.sh  debug_nlp_planner_flow.py  debug_semantic_matcher.py  init_test_map.py  integration_test_report.md  quick_test.sh  run_tests.sh  simple_planner_test.py  start_integration_test.sh  test_system_integration.py
sstg_nav_ws/: INSTALLATION.md  README.md  test_phase0.sh
sstg_nav_ws/src/sstg_interaction_manager/: setup.py
sstg_nav_ws/src/sstg_map_manager/: migrate_and_analyze.py  setup.py
sstg_nav_ws/src/sstg_msgs/: CMakeLists.txt  package.xml
sstg_nav_ws/src/sstg_perception/: setup.py
sstg_nav_ws/src/sstg_rrt_explorer/: CMakeLists.txt  QUICK_REFERENCE.md
sstg_nav_ws/src/sstg_system_manager/: package.xml  setup.cfg  setup.py
sstg_nav_ws/src/sstg_system_manager/sstg_system_manager/: system_manager_node.py  webrtc_camera_bridge.py
sstg_ui_app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
sstg_ui_app/doc/: UI_ARCHITECTURE_GUIDE.md
sstg_ui_app/public/: architecture-embed.html  interaction-core-embed.html  interaction_manager_flow.html  manifest.webmanifest  migration-embed.html  sstg_ui_architecture.html
sstg_ui_app/public/maps/: 20260327_005229.pgm  20260402_083419.yaml  manual_capture_report.json  manual_node_positions.json  topological_map_manual.json
sstg_ui_app/src/: App.tsx  index.css
sstg_ui_app/src/components/: ArchitectureView.tsx  ChatView.tsx  GuideView.tsx  MapView.tsx  RobotView.tsx  UsernameModal.tsx
sstg_ui_app/src/hooks/: useDepthImage.ts  useDepthToPointCloud.ts  useLaserScan.ts  useVoiceInput.ts  useWebRTCDualStream.ts
sstg_ui_app/src/lib/: objectMention.ts  pgm3DParser.ts  pgmParser.ts
sstg_ui_app/src/store/: chatStore.ts  mapStore.ts  rosStore.ts  visionStore.ts
sstg_ui_app/vite-plugins/: chatSyncPlugin.ts
yahboomcar_ws/: README.md
yahboomcar_ws/src/sstg_map_manager/: setup.py
yahboomcar_ws/src/sstg_msgs/: CMakeLists.txt
(+138 files in other folders)
