<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw_robot_nav</name>
  <version>0.1.0</version>
  <description>Bringup, gmapping SLAM, and Nav2 navigation configuration for hw_robot.</description>
  <maintainer email="Daojie.PENG@qq.com">Daojie PENG</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cmd_control</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mqtt_bridge_pkg</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>costmap_converter</exec_depend>
  <exec_depend>costmap_converter_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
