<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_bridge_pkg</name>
  <version>0.0.1</version>
  <description>A ROS 2 node to bridge MQTT messages to IMU and Odometry topics.</description>
  <maintainer email="Daojie.PENG@qq.com">Daojie PENG</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend> <!-- 确保这行存在 -->
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
